# crux

./: .gitignore  .mcp.json  BUILD_PLAN_002_IMPACT_ANALYSIS.md  BUILD_PLAN_003_KEY_MIGRATION.md  BUILD_PLAN_004_CLOSE_GAPS.md  BUILD_PLAN_005_TOOL_TRANSITIONS.md  BUILD_PLAN_006_MCP_CONSUMPTION.md  BUILD_PLAN_007_TERMINAL_INTEGRATION.md  BUILD_PLAN_008_REPO_MAP.md  BUILD_PLAN_009_MEMORY_SYSTEM.md  BUILD_PLAN_010_MULTI_MODEL_ROUTING.md  BUILD_PLAN_011_CODEBASE_INDEXING.md  BUILD_PLAN_012_GIT_AWARE_EDITING.md  BUILD_PLAN_013_RUST_MIGRATION.md  BUILD_PLAN_014_SESSION_RECOVERY.md  BUILD_PLAN_015_RUST_FEATURE_PARITY.md  BUILD_PLAN_015_SESSION_STALENESS.md  BUSINESS_PLAN.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PATTERNS_CRUX.md  EXECUTIVE_SUMMARY.md  GAPS.md  INVENTORY.md  KEY_OWNERSHIP.md  README.md  SECURITY.md  STRATEGY.md  config.json  deploy-runcrux.io.sh  intake-classification.md  intake-inventory.md  launch_mcp.sh  requirements.txt  setup.sh
.claude/: crux-context.md  mcp.json  settings.local.json
commands/: archive.md  configure-api.md  digest.md  init-project.md  log.md  promote.md  propose-mode.md  review-community.md  review-knowledge.md  scripts.md  stats.md
crux-roadmap/: crux-gap-report.md  crux-github-action-plan.md  crux-marketing-plan-addendum-vibe-coding-analysis.md  crux-openclaw-autonomous-business-guide.md  mobile-frontend-plan.md
crux-specs/: website-marketing-status-report.md
docs/: API.md  CLAWHUB-ANALYSIS.md  COMPETITORS.md  CONFIGURATION.md  DEVELOPMENT.md  MCP_PATTERNS.md  SEO_STRATEGY.md  TESTING.md  (+5 more)
(+240 files in other folders)
