[package]
name = "crux"
version = "0.1.0"
edition = "2024"
description = "Self-improving AI operating system — single binary, zero dependencies"
license = "MIT"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io", "schemars"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
regex = "1"
anyhow = "1"
shellexpand = "3"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
